@@ -67,7 +67,7 @@
 #include <dmalloc.h>
 #endif
 
-static char software_version[] = "$Id: odbc.c,v 1.179 2003/05/31 19:30:36 freddy77 Exp $";
+static char software_version[] = "$Id: odbc.c,v 1.180 2003/06/02 11:32:39 freddy77 Exp $";
 static void *no_unused_var_warn[] = { software_version, no_unused_var_warn };
 
 static SQLRETURN SQL_API _SQLAllocConnect(SQLHENV henv, SQLHDBC FAR * phdbc);
@@ -2042,6 +2042,7 @@ SQLGetFunctions(SQLHDBC hdbc, SQLUSMALLINT fFunction, SQLUSMALLINT FAR * pfExist
 		API3X(SQL_API_SQLALLOCHANDLE);
 		API_X(SQL_API_SQLALLOCSTMT);
 		API_X(SQL_API_SQLBINDCOL);
+		API_X(SQL_API_SQLBINDPARAM);
 		API_X(SQL_API_SQLBINDPARAMETER);
 		API__(SQL_API_SQLBROWSECONNECT);
 		API3_(SQL_API_SQLBULKOPERATIONS);
@@ -2101,12 +2102,12 @@ SQLGetFunctions(SQLHDBC hdbc, SQLUSMALLINT fFunction, SQLUSMALLINT FAR * pfExist
 		API3_(SQL_API_SQLSETDESCFIELD);
 		API3_(SQL_API_SQLSETDESCREC);
 		API3X(SQL_API_SQLSETENVATTR);
-		API__(SQL_API_SQLSETPARAM);
+		API_X(SQL_API_SQLSETPARAM);
 		API__(SQL_API_SQLSETPOS);
 		API__(SQL_API_SQLSETSCROLLOPTIONS);
 		API3_(SQL_API_SQLSETSTMTATTR);
 		API_X(SQL_API_SQLSETSTMTOPTION);
-		API__(SQL_API_SQLSPECIALCOLUMNS);
+		API_X(SQL_API_SQLSPECIALCOLUMNS);
 		API_X(SQL_API_SQLSTATISTICS);
 		API_X(SQL_API_SQLTABLEPRIVILEGES);
 		API_X(SQL_API_SQLTABLES);
@@ -2133,6 +2134,7 @@ SQLGetFunctions(SQLHDBC hdbc, SQLUSMALLINT fFunction, SQLUSMALLINT FAR * pfExist
 		API3X(SQL_API_SQLALLOCHANDLE);
 		API_X(SQL_API_SQLALLOCSTMT);
 		API_X(SQL_API_SQLBINDCOL);
+		API_X(SQL_API_SQLBINDPARAM);
 		API_X(SQL_API_SQLBINDPARAMETER);
 		API__(SQL_API_SQLBROWSECONNECT);
 		API3_(SQL_API_SQLBULKOPERATIONS);
@@ -2192,12 +2194,12 @@ SQLGetFunctions(SQLHDBC hdbc, SQLUSMALLINT fFunction, SQLUSMALLINT FAR * pfExist
 		API3_(SQL_API_SQLSETDESCFIELD);
 		API3_(SQL_API_SQLSETDESCREC);
 		API3X(SQL_API_SQLSETENVATTR);
-		API__(SQL_API_SQLSETPARAM);
+		API_X(SQL_API_SQLSETPARAM);
 		API__(SQL_API_SQLSETPOS);
 		API__(SQL_API_SQLSETSCROLLOPTIONS);
 		API3_(SQL_API_SQLSETSTMTATTR);
 		API_X(SQL_API_SQLSETSTMTOPTION);
-		API__(SQL_API_SQLSPECIALCOLUMNS);
+		API_X(SQL_API_SQLSPECIALCOLUMNS);
 		API_X(SQL_API_SQLSTATISTICS);
 		API_X(SQL_API_SQLTABLEPRIVILEGES);
 		API_X(SQL_API_SQLTABLES);
@@ -2221,6 +2223,7 @@ SQLGetFunctions(SQLHDBC hdbc, SQLUSMALLINT fFunction, SQLUSMALLINT FAR * pfExist
 		API3X(SQL_API_SQLALLOCHANDLE);
 		API_X(SQL_API_SQLALLOCSTMT);
 		API_X(SQL_API_SQLBINDCOL);
+		API_X(SQL_API_SQLBINDPARAM);
 		API_X(SQL_API_SQLBINDPARAMETER);
 		API__(SQL_API_SQLBROWSECONNECT);
 		API3_(SQL_API_SQLBULKOPERATIONS);
@@ -2280,12 +2283,12 @@ SQLGetFunctions(SQLHDBC hdbc, SQLUSMALLINT fFunction, SQLUSMALLINT FAR * pfExist
 		API3_(SQL_API_SQLSETDESCFIELD);
 		API3_(SQL_API_SQLSETDESCREC);
 		API3X(SQL_API_SQLSETENVATTR);
-		API__(SQL_API_SQLSETPARAM);
+		API_X(SQL_API_SQLSETPARAM);
 		API__(SQL_API_SQLSETPOS);
 		API__(SQL_API_SQLSETSCROLLOPTIONS);
 		API3_(SQL_API_SQLSETSTMTATTR);
 		API_X(SQL_API_SQLSETSTMTOPTION);
-		API__(SQL_API_SQLSPECIALCOLUMNS);
+		API_X(SQL_API_SQLSPECIALCOLUMNS);
 		API_X(SQL_API_SQLSTATISTICS);
 		API_X(SQL_API_SQLTABLEPRIVILEGES);
 		API_X(SQL_API_SQLTABLES);
