@@ -1,3 +1,7 @@
+Mon Jun 02 13:33:41 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
+	* src/odbc/odbc.c vms/odbc_driver_axp.opt win32/FreeTDS.def:
+	- update list of odbc implemented functions
+
 Sat May 31 21:23:43 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
 	* doc/api_status.txt src/odbc/odbc.c:
 	- implement SQLBindParam
